# coredumper

./: CMakeLists.txt  README.md
include/: common.h  coredump.h  dumper.h  elf_utils.h  exit_codes.h  mem_reader.h  parser.h  proc_parser.h
src/: coredump.c  dumper.c  elf_utils.c  main.c  mem_reader.c  parser.c  proc_parser.c
tests/: gtest_example.cc  test_mocks.h  test_proc_parser.cc
